# fastapi-opinionated-chat-realtime

./: pyproject.toml
fastapi_opinionated_chat_realtime/: plugin.py
fastapi_opinionated_chat_realtime/publish/: publish.py
fastapi_opinionated_chat_realtime/publish/controllers/: chat.py
fastapi_opinionated_chat_realtime/publish/controllers/socket/: chat.py
fastapi_opinionated_chat_realtime/publish/views/: index.html
